fix overflow things

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,11 @@
 
 body {
   font-family: 'TTLakes', sans-serif;
-  overflow-x: hidden;
+
+}
+
+.overflow {
+  overflow-x: hidden
 }
 
 * {
